# Euston

./: Readme.md
Data/: generate_bert_input.py  generate_gpt_input.py  generate_llama_input.py  generate_nonlinear_input.py
Euston-CPU/: CMakeLists.txt  Readme.md
Euston-CPU/src/: CMakeLists.txt  bootstrapping.cpp  myread.cpp  myread.h  utils.cpp  utils.h
Euston-CPU/src/Euston_func/: CMakeLists.txt  ckks_evaluator.cpp  ckks_evaluator.h  func_main.cpp  gelu.cpp  gelu.h  layernorm.cpp  layernorm.h  matrix_mul.cpp  matrix_mul.h  softmax.cpp  softmax.h
Euston-CPU/src/NEXUS_func/: CMakeLists.txt  ckks_evaluator.cpp  ckks_evaluator.h  main.cpp  matrix_mul.cpp  matrix_mul.h  softmax.cpp
Euston-GPU/: CMakeLists.txt  Readme.md
Euston-GPU/src/: CMakeLists.txt  myread.cu  myread.cuh  utils.cu  utils.cuh
Euston-GPU/src/Euston_func/: CMakeLists.txt  ckks_evaluator.cu  ckks_evaluator.cuh  gelu.cu  gelu.cuh  layernorm.cu  layernorm.cuh  main.cu  matrix_mul.cu  matrix_mul.cuh  softmax.cu  softmax.cuh
Euston-GPU/src/NEXUS_func/: CMakeLists.txt  ckks_evaluator.cu  ckks_evaluator.cuh  main.cu  matrix_mul.cu  matrix_mul.cuh
Euston-GPU/src/bootstrapping/common/: Polynomial.cuh
